[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/texture/pixel.png" type="Texture" id=1]
[ext_resource path="res://src/pipe/oil_drop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[node name="oil_drop" type="Area2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.160784, 0.160784, 0.160784, 1 )
position = Vector2( 1, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.160784, 0.160784, 0.160784, 1 )
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 0.86
randomness = 0.81
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 4.38
initial_velocity_random = 0.38

[node name="particles_lifetime" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
